Update odin-core for Java 9 build